# RustFlutter

./: .gitignore  README.md  pubspec.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
macos/Runner.xcodeproj/: project.pbxproj
tasks_plugin/: README.md  pubspec.yaml
tasks_plugin/android/: build.gradle  settings.gradle
tasks_plugin/android/src/main/: AndroidManifest.xml
tasks_plugin/example/: README.md  pubspec.yaml
tasks_plugin/example/android/app/: build.gradle.kts
tasks_plugin/example/integration_test/: simple_test.dart
tasks_plugin/example/ios/Runner/: Info.plist
tasks_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
tasks_plugin/example/lib/: main.dart
tasks_plugin/example/linux/: CMakeLists.txt
tasks_plugin/example/linux/flutter/: generated_plugins.cmake
tasks_plugin/example/linux/runner/: my_application.cc
tasks_plugin/example/macos/Runner.xcodeproj/: project.pbxproj
tasks_plugin/example/windows/: CMakeLists.txt
tasks_plugin/example/windows/runner/: Runner.rc  main.cpp
tasks_plugin/ios/: tasks_plugin.podspec
tasks_plugin/lib/: tasks_plugin.dart
tasks_plugin/linux/: CMakeLists.txt
tasks_plugin/macos/: tasks_plugin.podspec
tasks_plugin/rust/: Cargo.toml
tasks_plugin/rust/migration/: Cargo.toml
tasks_plugin/rust/migration/src/: m20220101_000001_create_table.rs
tasks_plugin/rust/src/: frb_generated.rs
tasks_plugin/rust/src/api/: mod.rs  simple.rs  tasks_lib.rs
tasks_plugin/windows/: CMakeLists.txt
tasks_server/: Cargo.toml
tasks_server/src/: main.rs  models.rs  services.rs
(+11 files in other folders)
