[package]
name = "tasks_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[workspace]
members = [".", "migration"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1.0.102"
futures = "0.3.32"
sea-orm = { version = "2.0.0-rc.34", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
migration = { path = "migration" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
